--- a/Menus/MenuInicial.form
+++ b/Menus/MenuInicial.form
@@ -3,17 +3,21 @@
   <grid id="27dc6" binding="PainelInicial" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="511" height="154"/>
+      <xy x="20" y="20" width="640" height="480"/>
     </constraints>
     <properties>
-      <minimumSize width="240" height="90"/>
+      <minimumSize width="640" height="480"/>
       <preferredSize width="240" height="90"/>
     </properties>
     <border type="none"/>
     <children>
       <component id="44e9a" class="javax.swing.JButton" binding="funcionarioButton">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="200" height="40"/>
+            <preferred-size width="250" height="40"/>
+            <maximum-size width="300" height="40"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Funcionário"/>
@@ -21,7 +25,11 @@
       </component>
       <component id="3d718" class="javax.swing.JButton" binding="clienteButton" default-binding="true">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="200" height="40"/>
+            <preferred-size width="250" height="40"/>
+            <maximum-size width="300" height="40"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Cliente"/>
@@ -29,18 +37,22 @@
       </component>
       <component id="b785d" class="javax.swing.JButton" binding="sairButton" default-binding="true">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="200" height="40"/>
+            <preferred-size width="250" height="40"/>
+            <maximum-size width="300" height="40"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Sair"/>
         </properties>
       </component>
-      <component id="25285" class="javax.swing.JLabel">
+      <component id="25285" class="javax.swing.JLabel" binding="titulo">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Bem Vindo a Let's Store"/>
+          <text value="Bem Vindo(a) a Let's Store"/>
         </properties>
       </component>
     </children>
