--- a/Menus/MenuLogin.form
+++ b/Menus/MenuLogin.form
@@ -38,7 +38,7 @@
           <text value="Senha"/>
         </properties>
       </component>
-      <component id="49ff0" class="javax.swing.JLabel">
+      <component id="49ff0" class="javax.swing.JLabel" binding="bemVindo">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -54,7 +54,7 @@
           <text value="Login"/>
         </properties>
       </component>
-      <component id="22493" class="javax.swing.JLabel">
+      <component id="22493" class="javax.swing.JLabel" binding="informacao">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
