--- a/Menus/MenuInicial.form
+++ b/Menus/MenuInicial.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Menus.MenuInicial">
-  <grid id="27dc6" binding="PainelInicial" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="PainelInicial" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="640" height="480"/>
@@ -53,6 +53,14 @@
         </constraints>
         <properties>
           <text value="Bem Vindo(a) a Let's Store"/>
+        </properties>
+      </component>
+      <component id="9c1a0" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="6" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="By conglomerado Let"/>
         </properties>
       </component>
     </children>
