--- a/Menus/MenuCliente.form
+++ b/Menus/MenuCliente.form
@@ -18,7 +18,7 @@
           <grid row="1" column="0" row-span="2" col-span="4" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Loja"/>
+          <text value="Produtos"/>
         </properties>
       </component>
       <component id="c4bd8" class="javax.swing.JLabel" binding="mensagem">
