--- a/Menus/MenuInicial.form
+++ b/Menus/MenuInicial.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="PainelInicial" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="640" height="480"/>
+      <xy x="20" y="20" width="640" height="380"/>
     </constraints>
     <properties>
       <minimumSize width="540" height="380"/>
@@ -49,20 +49,19 @@
       </component>
       <component id="25285" class="javax.swing.JLabel" binding="titulo">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="4" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="166" height="85"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Bem Vindo(a) a Let's Store"/>
         </properties>
       </component>
-      <component id="9c1a0" class="javax.swing.JLabel">
+      <vspacer id="62cf7">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="6" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties>
-          <text value="By conglomerado Let"/>
-        </properties>
-      </component>
+      </vspacer>
     </children>
   </grid>
 </form>
