--- a/Menus/MenuLogin.form
+++ b/Menus/MenuLogin.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="PainelLogin" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="640" height="640"/>
+      <xy x="48" y="16" width="640" height="480"/>
     </constraints>
     <properties>
       <maximumSize width="800" height="640"/>
@@ -12,27 +12,6 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="5247" class="javax.swing.JTextField" binding="Login">
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value=""/>
-          <visible value="true"/>
-        </properties>
-      </component>
-      <component id="34d14" class="javax.swing.JPasswordField" binding="senha">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="38"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value=""/>
-        </properties>
-      </component>
       <component id="63451" class="javax.swing.JLabel">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
@@ -41,14 +20,6 @@
         </constraints>
         <properties>
           <text value="Senha"/>
-        </properties>
-      </component>
-      <component id="49ff0" class="javax.swing.JLabel" binding="bemVindo">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Bem Vindo! "/>
         </properties>
       </component>
       <component id="3b87a" class="javax.swing.JLabel">
@@ -72,11 +43,25 @@
           <text value="Preencha os campos abaixo corretamente para efetuar o login"/>
         </properties>
       </component>
+      <component id="7af0e" class="javax.swing.JButton" binding="voltarButton" default-binding="true">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="200" height="40"/>
+            <preferred-size width="474" height="40"/>
+            <maximum-size width="300" height="40"/>
+          </grid>
+        </constraints>
+        <properties>
+          <selected value="false"/>
+          <text value="Voltar"/>
+          <verticalAlignment value="0"/>
+        </properties>
+      </component>
       <component id="9f265" class="javax.swing.JButton" binding="Logar">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="40"/>
-            <preferred-size width="250" height="40"/>
+            <preferred-size width="474" height="40"/>
             <maximum-size width="300" height="40"/>
           </grid>
         </constraints>
@@ -84,16 +69,33 @@
           <text value="Entrar"/>
         </properties>
       </component>
-      <component id="5ce06" class="javax.swing.JButton" binding="voltarButton" default-binding="true">
+      <component id="5247" class="javax.swing.JTextField" binding="Login">
         <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <minimum-size width="200" height="40"/>
-            <preferred-size width="250" height="40"/>
-            <maximum-size width="300" height="40"/>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="400" height="30"/>
           </grid>
         </constraints>
         <properties>
-          <text value="Voltar"/>
+          <text value=""/>
+          <visible value="true"/>
+        </properties>
+      </component>
+      <component id="34d14" class="javax.swing.JPasswordField" binding="senha">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="400" height="30"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="49ff0" class="javax.swing.JLabel" binding="bemVindo">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Bem Vindo! "/>
         </properties>
       </component>
     </children>
