--- a/Menus/MenuCliente.form
+++ b/Menus/MenuCliente.form
@@ -1,37 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Menus.MenuCliente">
-  <grid id="27dc6" binding="MenuCliente" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="MenuCliente" layout-manager="GridLayoutManager" row-count="6" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="400" height="300"/>
+      <xy x="20" y="20" width="472" height="396"/>
     </constraints>
     <properties>
-      <maximumSize width="400" height="120"/>
-      <minimumSize width="400" height="120"/>
-      <preferredSize width="400" height="120"/>
+      <maximumSize width="400" height="240"/>
+      <minimumSize width="400" height="240"/>
+      <preferredSize width="400" height="240"/>
       <requestFocusEnabled value="true"/>
     </properties>
     <border type="none"/>
     <children>
+      <component id="c4bd8" class="javax.swing.JLabel" binding="mensagem">
+        <constraints>
+          <grid row="0" column="3" row-span="1" col-span="5" vsize-policy="4" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="134" height="23"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Selecione uma operacão"/>
+        </properties>
+      </component>
+      <vspacer id="39474">
+        <constraints>
+          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
       <component id="37f25" class="javax.swing.JButton" binding="LojaButton">
         <constraints>
-          <grid row="1" column="0" row-span="2" col-span="4" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="3" row-span="2" col-span="5" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="250" height="40"/>
+            <maximum-size width="250" height="40"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Produtos"/>
         </properties>
       </component>
-      <component id="c4bd8" class="javax.swing.JLabel" binding="mensagem">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Selecione a operacão"/>
-        </properties>
-      </component>
       <component id="b2582" class="javax.swing.JButton" binding="carrinhoButton" default-binding="true">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="3" row-span="1" col-span="5" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="250" height="40"/>
+            <maximum-size width="250" height="40"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Carrinho"/>
@@ -39,17 +52,15 @@
       </component>
       <component id="eddcc" class="javax.swing.JButton" binding="sairButton" default-binding="true">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="3" row-span="1" col-span="5" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="250" height="40"/>
+            <maximum-size width="250" height="40"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Sair"/>
         </properties>
       </component>
-      <vspacer id="39474">
-        <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
     </children>
   </grid>
 </form>
