--- a/Menus/MenuInicial.form
+++ b/Menus/MenuInicial.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Menus.MenuInicial">
-  <grid id="27dc6" binding="PainelInicial" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="PainelInicial" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="640" height="380"/>
@@ -21,6 +21,7 @@
         </constraints>
         <properties>
           <text value="Funcionário"/>
+          <toolTipText value="Ir para o menu funcionário"/>
         </properties>
       </component>
       <component id="3d718" class="javax.swing.JButton" binding="clienteButton" default-binding="true">
@@ -50,7 +51,7 @@
       <component id="25285" class="javax.swing.JLabel" binding="titulo">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="4" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="166" height="85"/>
+            <preferred-size width="166" height="82"/>
           </grid>
         </constraints>
         <properties>
@@ -62,6 +63,14 @@
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
+      <component id="76683" class="javax.swing.JLabel" binding="conglomeradoLet">
+        <constraints>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="6" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="By ©Conglomerado Let"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
