--- a/Menus/funcionarioFuncoes/MenuListarProdutos.form
+++ b/Menus/funcionarioFuncoes/MenuListarProdutos.form
@@ -8,14 +8,16 @@
     <properties/>
     <border type="none"/>
     <children>
-      <scrollpane id="c1e74" binding="Scroll">
+      <component id="8d784" class="javax.swing.JTextArea" binding="listaProdutos">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
+          </grid>
         </constraints>
-        <properties/>
-        <border type="none"/>
-        <children/>
-      </scrollpane>
+        <properties>
+          <text value="dwadawddwad&#10;dwadawdaw"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
