--- a/Menus/MenuLogin.form
+++ b/Menus/MenuLogin.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Menus.MenuLogin">
-  <grid id="27dc6" binding="PainelLogin" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="PainelLogin" layout-manager="GridLayoutManager" row-count="8" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="48" y="16" width="640" height="480"/>
@@ -14,20 +14,12 @@
     <children>
       <component id="63451" class="javax.swing.JLabel">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="38" height="38"/>
           </grid>
         </constraints>
         <properties>
           <text value="Senha"/>
-        </properties>
-      </component>
-      <component id="3b87a" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Login"/>
         </properties>
       </component>
       <component id="22493" class="javax.swing.JLabel" binding="informacao">
@@ -45,7 +37,7 @@
       </component>
       <component id="7af0e" class="javax.swing.JButton" binding="voltarButton" default-binding="true">
         <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="40"/>
             <preferred-size width="474" height="40"/>
             <maximum-size width="300" height="40"/>
@@ -59,7 +51,7 @@
       </component>
       <component id="9f265" class="javax.swing.JButton" binding="Logar">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="40"/>
             <preferred-size width="474" height="40"/>
             <maximum-size width="300" height="40"/>
@@ -71,7 +63,7 @@
       </component>
       <component id="5247" class="javax.swing.JTextField" binding="Login">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="400" height="20"/>
           </grid>
         </constraints>
@@ -82,7 +74,7 @@
       </component>
       <component id="34d14" class="javax.swing.JPasswordField" binding="senha">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="400" height="20"/>
           </grid>
         </constraints>
@@ -98,6 +90,28 @@
           <text value="Bem Vindo! "/>
         </properties>
       </component>
+      <vspacer id="57336">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <minimum-size width="100" height="60"/>
+            <preferred-size width="100" height="60"/>
+            <maximum-size width="-1" height="60"/>
+          </grid>
+        </constraints>
+      </vspacer>
+      <component id="3b87a" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Login"/>
+        </properties>
+      </component>
+      <vspacer id="8f892">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
     </children>
   </grid>
 </form>
