atualização de interface lista e ajuste de erro de transferência da loja

--- a/Menus/funcionarioFuncoes/MenuListarProdutos.form
+++ b/Menus/funcionarioFuncoes/MenuListarProdutos.form
@@ -1,75 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Menus.funcionarioFuncoes.MenuListarProdutos">
-  <grid id="27dc6" binding="painelListaProdutos" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="PainelListar" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="782"/>
+      <xy x="11" y="17" width="800" height="300"/>
     </constraints>
-    <properties/>
-    <border type="none"/>
+    <properties>
+      <minimumSize width="800" height="300"/>
+      <name value=""/>
+      <preferredSize width="800" height="300"/>
+      <requestFocusEnabled value="false"/>
+    </properties>
+    <border type="none" title="Estoque" title-justification="2">
+      <font/>
+    </border>
     <children>
-      <component id="8d784" class="javax.swing.JTextArea" binding="listaProdutos">
+      <component id="68133" class="javax.swing.JTextField" binding="textField1" default-binding="true">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
+          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
           </grid>
-        </constraints>
-        <properties>
-          <text value=""/>
-        </properties>
-      </component>
-      <component id="d57b8" class="javax.swing.JList" binding="lista">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties>
-          <model>
-            <item value="a"/>
-            <item value="d"/>
-            <item value="fccc"/>
-            <item value=""/>
-            <item value="c"/>
-            <item value="c"/>
-            <item value="c"/>
-            <item value=""/>
-            <item value="c"/>
-            <item value="c"/>
-            <item value=""/>
-            <item value="c"/>
-            <item value="c"/>
-            <item value="c"/>
-            <item value=""/>
-            <item value="c"/>
-            <item value="c"/>
-            <item value="c"/>
-            <item value="c"/>
-            <item value="c"/>
-            <item value="c"/>
-            <item value="c"/>
-            <item value="cc"/>
-            <item value="c"/>
-            <item value="cc"/>
-            <item value="c"/>
-            <item value="c"/>
-            <item value="c"/>
-            <item value="c"/>
-            <item value=""/>
-            <item value="c"/>
-            <item value="c"/>
-            <item value="c"/>
-            <item value="c"/>
-            <item value="c"/>
-          </model>
-        </properties>
-      </component>
-      <component id="f1f6" class="javax.swing.JScrollBar" binding="scrollbar">
-        <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
+      <component id="84411" class="javax.swing.JLabel" binding="pesquisaText">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Pesquisa"/>
+        </properties>
+      </component>
+      <scrollpane id="9b72f" binding="Scrollpane1">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="364" height="138"/>
+          </grid>
+        </constraints>
+        <properties>
+          <horizontalScrollBarPolicy value="30"/>
+          <verticalScrollBarPolicy value="22"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="f8b68" class="javax.swing.JList" binding="listProds">
+            <constraints/>
+            <properties>
+              <model/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
+      <scrollpane id="24406" binding="Scrollpane2">
+        <constraints>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="164" height="17"/>
+          </grid>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="3ed1d" class="javax.swing.JLabel" binding="infoPanel">
+            <constraints/>
+            <properties>
+              <text value=""/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
