Adicionando KeyListener no menu de adicionar produtos

--- a/Menus/funcionarioFuncoes/MenuFuncionario.form
+++ b/Menus/funcionarioFuncoes/MenuFuncionario.form
@@ -17,6 +17,7 @@
           </grid>
         </constraints>
         <properties>
+          <font name="Arial Black" style="1"/>
           <text value="O que deseja fazer?"/>
         </properties>
       </component>
