--- a/Menus/funcionarioFuncoes/MenuAdicionarProdutos.form
+++ b/Menus/funcionarioFuncoes/MenuAdicionarProdutos.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Menus.funcionarioFuncoes.MenuAdicionarProdutos">
-  <grid id="27dc6" binding="painelAdicionarProdutos" layout-manager="GridLayoutManager" row-count="15" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="painelAdicionarProdutos" layout-manager="GridLayoutManager" row-count="14" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="563" height="650"/>
@@ -167,14 +167,9 @@
           <visible value="false"/>
         </properties>
       </component>
-      <vspacer id="2275c">
-        <constraints>
-          <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
       <component id="efc86" class="javax.swing.JButton" binding="confirmar">
         <constraints>
-          <grid row="13" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="12" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="120" height="40"/>
           </grid>
         </constraints>
@@ -193,9 +188,20 @@
           <text value="Preencha os campos abaixo"/>
         </properties>
       </component>
+      <component id="9a89d" class="javax.swing.JButton" binding="sairButton">
+        <constraints>
+          <grid row="13" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="120" height="40"/>
+            <preferred-size width="120" height="40"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Sair"/>
+        </properties>
+      </component>
       <component id="e7cb9" class="javax.swing.JComboBox" binding="tiposProdutosBox">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="Arial" style="1"/>
@@ -209,16 +215,6 @@
           <opaque value="true"/>
           <toolTipText value="Clique para ver mais opções"/>
           <visible value="true"/>
-        </properties>
-      </component>
-      <component id="9a89d" class="javax.swing.JButton" binding="sairButton">
-        <constraints>
-          <grid row="14" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="120" height="40"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="Sair"/>
         </properties>
       </component>
     </children>
