--- a/Menus/MenuLogin.form
+++ b/Menus/MenuLogin.form
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Menus.MenuLogin">
-  <grid id="27dc6" binding="PainelLogin" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="PainelLogin" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="48" y="16" width="787" height="573"/>
+      <xy x="22" y="20" width="640" height="480"/>
     </constraints>
     <properties>
       <maximumSize width="800" height="640"/>
       <minimumSize width="640" height="480"/>
-      <preferredSize width="640" height="480"/>
+      <preferredSize width="500" height="480"/>
     </properties>
     <border type="none"/>
     <children>
       <component id="22493" class="javax.swing.JLabel" binding="informacao">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <alignmentX value="0.0"/>
@@ -27,9 +27,8 @@
       </component>
       <component id="7af0e" class="javax.swing.JButton" binding="voltarButton" default-binding="true">
         <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="40"/>
-            <preferred-size width="474" height="40"/>
             <maximum-size width="300" height="40"/>
           </grid>
         </constraints>
@@ -41,8 +40,7 @@
       </component>
       <component id="34d14" class="javax.swing.JPasswordField" binding="senha">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="300" height="20"/>
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <maximum-size width="350" height="20"/>
           </grid>
         </constraints>
@@ -52,7 +50,7 @@
       </component>
       <component id="49ff0" class="javax.swing.JLabel" binding="bemVindo">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="Arial Black" style="1"/>
@@ -61,8 +59,7 @@
       </component>
       <component id="5247" class="javax.swing.JTextField" binding="Login">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="300" height="20"/>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <maximum-size width="350" height="20"/>
           </grid>
         </constraints>
@@ -73,9 +70,8 @@
       </component>
       <component id="9f265" class="javax.swing.JButton" binding="Logar">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="40"/>
-            <preferred-size width="474" height="40"/>
             <maximum-size width="300" height="40"/>
           </grid>
         </constraints>
@@ -85,7 +81,7 @@
       </component>
       <component id="3b87a" class="javax.swing.JLabel">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Login"/>
@@ -93,7 +89,7 @@
       </component>
       <component id="63451" class="javax.swing.JLabel">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="38" height="38"/>
           </grid>
         </constraints>
@@ -101,6 +97,20 @@
           <text value="Senha"/>
         </properties>
       </component>
+      <vspacer id="5860a">
+        <constraints>
+          <grid row="0" column="0" row-span="6" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <preferred-size width="30" height="-1"/>
+          </grid>
+        </constraints>
+      </vspacer>
+      <vspacer id="6ddd5">
+        <constraints>
+          <grid row="0" column="3" row-span="6" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <preferred-size width="10" height="-1"/>
+          </grid>
+        </constraints>
+      </vspacer>
     </children>
   </grid>
 </form>
